--- a/07-Backend-MVC/CarritoCompras/views/busquedaSpringer.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/busquedaSpringer.ejs
@@ -193,7 +193,7 @@
         for (var j = 0; j < 10; j++) {
           if (typeof data.records[i].creators[1] !== 'undefined') {
             var autor1 = data.records[i].creators[1].creator;
-            var autores = autorHtml + ' ' + 'y ' + ' ' + autor1;
+            var autores = autorHtml + '; ' + autor1;
             var authorb1 = autor1.charAt(0);
             var textoAuthorDividido1 = autor1.split(" ");
             var numeroPalabras1 = textoAuthorDividido1.length;
@@ -241,7 +241,7 @@
         for (var j = 0; j < 10; j++) {
           if (typeof data.records[i].creators[2] !== 'undefined') {
             var autor2 = data.records[i].creators[2].creator;
-            var autores = autorHtml + ', ' + autor1 + ' ' + 'y ' + ' ' + autor2;
+            var autores = autorHtml + '; ' + autor1 + '; ' + autor2;
             var authorb2 = autor2.charAt(0);
             var textoAuthorDividido2 = autor2.split(" ");
             var numeroPalabras2 = textoAuthorDividido2.length;
@@ -285,7 +285,7 @@
         for (var j = 0; j < 10; j++) {
           if (typeof data.records[i].creators[3] !== 'undefined') {
             var autor3 = data.records[i].creators[3].creator;
-            var autores = autorHtml + ', ' + autor1 + ', ' + autor2 + ' ' + 'y ' + ' ' + autor3;
+            var autores = autorHtml + '; ' + autor1 + '; ' + autor2 + '; ' + autor3;
             var authorb3 = autor3.charAt(0);
             var textoAuthorDividido3 = autor3.split(" ");
             var numeroPalabras3 = textoAuthorDividido3.length;
@@ -328,7 +328,7 @@
         for (var j = 0; j < 10; j++) {
           if (typeof data.records[i].creators[4] !== 'undefined') {
             var autor4 = data.records[i].creators[4].creator;
-            var autores = autorHtml + ', ' + autor1 + ', ' + autor2 + ', ' + autor3 + ' ' + 'y ' + ' ' + autor4;
+            var autores = autorHtml + '; ' + autor1 + '; ' + autor2 + '; ' + autor3 + '; ' + autor4;
             var authorb4 = autor4.charAt(0);
             var textoAuthorDividido4 = autor4.split(" ");
             var numeroPalabras4 = textoAuthorDividido4.length;
@@ -371,7 +371,7 @@
         for (var j = 0; j < 10; j++) {
           if (typeof data.records[i].creators[5] !== 'undefined') {
             var autor5 = data.records[i].creators[5].creator;
-            var autores = autorHtml + ', ' + autor1 + ', ' + autor2 + ', ' + autor3 + ', ' + autor4 + ' ' + 'y ' + ' ' + autor5;
+            var autores = autorHtml + '; ' + autor1 + '; ' + autor2 + '; ' + autor3 + '; ' + autor4 + '; ' + autor5;
             var authorb5 = autor5.charAt(0);
             var textoAuthorDividido5 = autor5.split(" ");
             var numeroPalabras5 = textoAuthorDividido5.length;
@@ -709,7 +709,7 @@
         for (var j = 0; j < 10; j++) {
           if (typeof data.data[i].authors[1] !== 'undefined') {
             var autor1 = data.data[i].authors[1];
-            var autores = autorHtml + ' ' + 'y ' + ' ' + autor1;
+            var autores = autorHtml + '; '+ autor1;
             var authorb1 = autor1.charAt(0);
             var textoAuthorDividido1 = autor1.split(" ");
             var numeroPalabras1 = textoAuthorDividido1.length;
@@ -757,7 +757,7 @@
         for (var j = 0; j < 10; j++) {
           if (typeof data.data[i].authors[2] !== 'undefined') {
             var autor2 = data.data[i].authors[2];
-            var autores = autorHtml + ', ' + autor1 + ' ' + 'y ' + ' ' + autor2;
+            var autores = autorHtml + '; ' + autor1 + '; '+ autor2;
             var authorb2 = autor2.charAt(0);
             var textoAuthorDividido2 = autor2.split(" ");
             var numeroPalabras2 = textoAuthorDividido2.length;
@@ -801,7 +801,7 @@
         for (var j = 0; j < 10; j++) {
           if (typeof data.data[i].authors[3] !== 'undefined') {
             var autor3 = data.data[i].authors[1];
-            var autores = autorHtml + ', ' + autor1 + ', ' + autor2 + ' ' + 'y ' + ' ' + autor3;
+            var autores = autorHtml + '; ' + autor1 + '; ' + autor2 + '; ' + autor3;
             var authorb3 = autor3.charAt(0);
             var textoAuthorDividido3 = autor3.split(" ");
             var numeroPalabras3 = textoAuthorDividido3.length;
